--- a/src/components/TypeArea/TypeArea.css
+++ b/src/components/TypeArea/TypeArea.css
@@ -8,3 +8,13 @@
   height: 150px;
   border: none;
 }
+
+.users-writing {
+  height: 10px;
+  font-size: 10px;
+}
+
+.user-writing {
+  display: inline-block;
+  margin-right: 4px;
+}
